<resources>
    <string name="app_name">Icebr8k</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_field_nospace">No space in username</string>
    <string name="error_invalid_username">Username needs at least 5 characters</string>
    <string name="log_out">Log Out</string>
    <string name="feedback">Support &amp; Feedback</string>
    <string name="check_back_later">No more questions</string>
    <string name="question_skip">skipped</string>
    <string name="date_header_yesterday">Yesterday</string>
    <string name="OneSignal_user_API_key">YTc5NDVhYzEtMDBhMC00YTRiLTgyNzEtNTE0ZjE1Yjc5YmZm</string>
    <string name="OneSignal_App_id">c1189c2a-37e1-4db8-8f8e-c236f552131a</string>
    <string name="SignUp">Need An Account ?\t<u>Sign Up</u></string>
    <string name="full_name">Full Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="avatar">Avatar</string>
    <string name="or">or</string>
    <string name="login">Login</string>
    <string name="emailError">not a valid email address</string>
    <string name="ageError">Sorry kid, you must be 13 or older to use this app</string>
    <string name="pwdError">password does not match</string>
    <string name="pwdError2">password needs at least 6 characters with no space</string>
    <string name="usernameError">username already exist</string>
    <string name="usernameError2">username needs at least 3 and at most 20 characters</string>
    <string name="usernameError3">username should not contain spaces</string>
    <string name="emptyfieldError">this field is required </string>
    <string name="sendMessageError"><![CDATA[<b><font color=#FF0000>Failed,tap to try again</font></b>]]></string>
    <string name="hint1"><i>Search Name</i></string>
    <string name="message_input_hint">Type Here</string>
    <string name="google_maps_api_key">AIzaSyDGE7baQEbkmk4wCJZhp4V9vO9hT9_c64w</string>
    <string name="firebase_path_error">username should not contain character . # $ / [ ]</string>
    <string name="location_reminder">By enabling Location Service, other Icebr8k users may be able to locate you. To turn off Location Service go to Settings at the top left menu.</string>
    <string name="radius_title">Choose A Radius</string>
    <string name="cancel">Cancel</string>
    <string name="no_users">No Users Found</string>
    <string name="ok">OK</string>
    <string name="no_question_left">No more questions, try your luck with refresh button ☺ </string>
    <string name="dont_show_again">Don\'t show again </string>
    <string name="title_activity_full_image_view">FullImageView</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="channel_name">Icebr8k Location Service</string>
    <string name="channel_description">To track user location if share my location setting is on</string>
    <string name="Icebr8k_notification_title_location_service">Location Service Disabled</string>
    <string name="Icebr8k_notification_context_location_service">You have turned off location services,
        we are unable to share your location to other Icebr8k users.
        Turn location on and set it to high accuracy.</string>
    <string name="Icebr8k_notification_title_location_permission">Location Permission Needed</string>
    <string name="Icebr8k_notification_context_location_permission">You have not granted location permission,
        we are unable to share your location to other Icebr8k users.</string>
    <string name="video_chat">Video Chat</string>
    <string name="voice_chat">Voice Chat</string>
    <string name="voice">Voice</string>
    <string name="image">Image</string>
    <string name="enter_message">Enter a message...</string>
    <string name="dont_ask_again">Don\'t ask again </string>
    <string name="first_login_message">Welcome to Icebr8k. Icebr8k is here to help make connecting
        easier. We only make Icebr8k better with your help. We would appreciate your feedback.
        You can do so by clicking on the top left icon and clicking on Support and Feedback. </string>
    <string name="privacy_policy">
Icebr8k built the Icebr8k app as a Free service. This SERVICE is provided by Icebr8k at no cost and
        is intended for use as is.
\nThis page is used to inform website visitors regarding our policies with the collection, use, and
        disclosure of Personal Information if anyone decided to use our Service.
\nIf you choose to use our Service, then you agree to the collection and use of information in
        relation to this policy. The Personal Information that we collect is used for providing
        and improving the Service. We will not use or share your information with anyone except as described in this Privacy Policy.
\nThe terms used in this Privacy Policy have the same meanings as in our Terms and Conditions,
        which is accessible at Icebr8k unless otherwise defined in this Privacy Policy.
        \n<b>Information Collection and Use</b>
\nFor a better experience, while using our Service, we may require you to provide us with certain
        personally identifiable information, including but not limited to Consumer Data.
        The information  we request  will be retained by us and used as described in this privacy policy.
The app does use third party services that may collect information used to identify you.
Link to privacy policy of third party service providers used by the app
 \n<a href="https://policies.google.com/privacy">
       Google Privacy Policy
    </a>
        \n<b>Log Data</b>
\nWe want to inform you that whenever you use our Service, in a case of an error in the app we
        collect data and information (through third party products) on your phone called Log Data.
        This Log Data may include information such as your device Internet Protocol (“IP”) address,
        device name, operating system version, the configuration of the app when utilizing our Service, the time and date of your use of the Service, and other statistics.
Cookies are files with small amount of data that is commonly used as an anonymous unique identifier.
        These are sent to your browser from the website that you visit and are stored on your device
        internal memory.
This Service does not use these “cookies” explicitly. However, the app may use third party code and
        libraries that use “cookies” to collection information and to improve their services.
        You have the option to either accept or refuse these cookies and know when a cookie is
        being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this Service.
        \n<b>Service Providers</b>
        \n OneSignal is a third party service we used for pushing notification for this app.
        This privacy policy (the “OneSignal Privacy Policy”) explains how OneSignal may collect,
        use, store, and disclose information about the end users (“End Users”) of Icebr8k mobile applications.
         \n<a href="https://onesignal.com/privacy_policy">  OneSignal Privacy Policy</a><a />
\n  We may employ third-party companies and individuals due to the following reasons:
\n  To facilitate our Service;
\n  To provide the Service on our behalf;
\n  To perform Service-related services; or
\n  To assist us in analyzing how our Service is used.
\n  We want to inform users of this Service that these third parties have access to your Personal
        Information. The reason is to perform the tasks assigned to them on our behalf. However,
        they are obligated not to disclose or use the information for any other purpose.
        \n<b>Security</b>
\nWe value your trust in providing us your Personal Information, thus we are striving to use commercially
        acceptable means of protecting it. But remember that no method of transmission over the internet,
        or method of electronic storage is 100% secure and reliable, and we cannot guarantee its absolute security.
\n<b>Links to Other Sites</b>
\nThis Service may contain links to other sites. If you click on a third-party link, you will be
        directed to that site. Note that these external sites are not operated by us. Therefore,
        we strongly advise you to review the Privacy Policy of these websites. We have no control
        over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.
\n<b>Children’s Privacy</b>
\nThese Services do not address anyone under the age of 13. We do not knowingly collect personally
        identifiable information from children under 13. In the case we discover that a child under
        13 has provided us with personal information, we immediately delete this from our servers.
        If you are a parent or guardian and you are aware that your child has provided us with
        personal information, please contact us so that we will be able to do necessary actions.
        \n<b>Changes to This Privacy Policy</b>
\nWe may update our Privacy Policy from time to time. Thus, you are advised to review this page
        periodically for any changes. We will notify you of any changes by posting the new Privacy
        Policy on this page. These changes are effective immediately after they are posted on this page.
        \n<b>Contact Us</b>
\nIf you have any questions or suggestions about our Privacy Policy, do not hesitate to contact us
        at Icebr8kdev@gmail.com </string>
    <string name="icebr8k_s_privacy_policy_agreement"><u>Icebr8k\'s Privacy Policy Agreement</u></string>
    <string name="pick_birthdate">"Choose your birthdate</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="share_my_location">Share My Location</string>
    <string name="make_my_profile_public">Make My Profile Public</string>
    <string name="_1_hate_it_10_love_it">1:Hate it 10:Love it</string>
    <string name="result">Result</string>
    <string name="confirm">Confirm</string>
    <string name="skip">Skip</string>
    <string name="more_questions">More Questions</string>
    <string name="connect">Connect</string>
    <string name="leave_feedback">Leave Feedback</string>
    <string name="title_activity_search_people_nearby">SearchPeopleNearby</string>
    <string name="tag_dialog_title">Upload your own tag</string>
    <string name="tag_dialog_hint">Enter your tag here...</string>
    <string name="tag_dialog_one_word_error">Tag can only be one word</string>
    <string name="tag_report_dialog_title">Do you want to report this Tag?</string>
    <string name="tag_report_dialog_pos_btn">Yes</string>
    <string name="tag_report_dialog_neg_btn">No</string>
    <string name="tag_add_success">Tag Added</string>
    <string name="tag_add_failed">Adding Tag Failed</string>
    <string name="tag_no_tag_text">Be the first to add a Tag.  Click the + on the bottom right.</string>
    <string name="tag_report_success">The Icebr8k Team has been notified.</string>
    <string name="tag_report_duplicated">You have already reported this Tag.</string>
    <string name="tag_has_badword">This Tag contains vulgar language and cannot be submitted.</string>
    <string name="tag_report_failed">Report Failed.</string>
    <string name="question_report_dialog_title">Do you want to report this question as offensive?</string>
    <string name="question_report_dialog_pos_btn">Yes</string>
    <string name="question_report_dialog_neg_btn">No</string>
    <string name="dialog_welcome_title">Welcome to Icebr8k</string>
    <string name="what_type_of_question">What type of question?</string>
    <string name="multiple_choice">Multiple Choice</string>
    <string name="scaled">Scaled</string>
</resources>