<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/welcome_dialog_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@color/lightBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/welcome_dialog_title"
            android:layout_marginTop="8dp"
            android:textSize="22sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-regular"
            android:text="@string/dialog_welcome_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/icebr8k_logo"
            android:layout_width="56dp"
            android:layout_height="56dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:text="@string/first_login_message"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/welcome_dialog_okay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:text="@string/ok"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>



</LinearLayout>