<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBlue"
    tools:context="app.jayang.icebr8k.signup">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_signup"
        android:layout_width="match_parent"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="Sign Up"
        app:titleTextColor="@color/white"
        android:layout_height="50dp"></android.support.v7.widget.Toolbar>
    <ScrollView
        android:id="@+id/sv_signup"
        android:layout_below="@id/toolbar_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_gravity="center_horizontal"
          android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
    <android.support.design.widget.TextInputLayout
        app:errorEnabled="false"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:id="@+id/fullname_layout_signup"
        android:hint="@string/full_name"
        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">
        <android.support.design.widget.TextInputEditText
            android:maxLength="20"
            android:inputType="textCapWords"
            android:id="@+id/fullname_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </android.support.design.widget.TextInputLayout>

            <ImageView
                android:id="@+id/avatar_signup"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:paddingBottom="10dp"
                android:clickable="true"
                android:contentDescription="@string/avatar"
                android:onClick="avatarOnClick_signup"
                android:src="@drawable/camera_selector"
                tools:ignore="OnClick"/>
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="300dp"
            android:id="@+id/username_layout_signup"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/username"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/username_signup"
                android:maxLength="20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:singleLine="true"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_gravity="center_horizontal"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/birthdate_layout_signup"
            android:hint="Birthdate"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/birthdate_signup"
                android:inputType="text"
                android:imeActionLabel="Sign Up"
                android:focusableInTouchMode="false"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/></android.support.design.widget.TextInputLayout>




        <android.support.design.widget.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/email_layout_signup"
            android:hint="@string/email"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">
            <android.support.design.widget.TextInputEditText
                android:inputType="textEmailAddress"
                android:id="@+id/email_signup"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/password_layout_signup"
            android:hint="@string/password"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/password_signup"
                android:inputType="textPassword"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_gravity="center_horizontal"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/confirmpwd_layout_signup"
            android:hint="@string/confirm_password"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/confirmpwd_signup"
                android:inputType="textPassword"
                android:imeActionLabel="Sign Up"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </android.support.design.widget.TextInputLayout>



        <android.support.v7.widget.AppCompatButton
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:id="@+id/signupbtn_signup"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:layout_margin="10dp"
            android:layout_gravity="center_horizontal"
            android:elevation="4dp"
            android:onClick="onClickSignUp"
            android:text="Sign Up"/>
    </LinearLayout>
    </ScrollView>
    </RelativeLayout>


</RelativeLayout>
