<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/create_question_hp_toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorPrimary"
        android:elevation="3dp"
        android:theme="@style/MyActionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Back">

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_rectangle"
        android:backgroundTint="@color/creamYellow"
        android:elevation="6dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_question_hp_toolbar"
        app:layout_constraintVertical_bias="0.127">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/what_type_of_question"
            android:textColor="@color/black"
            android:textSize="22dp" />

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/create_question_hp_mc_btn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="85dp"
                android:layout_height="40dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/rounded_rec_green"
                android:gravity="center"
                android:text="@string/multiple_choice"
                android:foreground="?selectableItemBackground"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16dp" />

            <Button
                android:id="@+id/create_question_hp_sc_btn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="85dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:background="@drawable/rounded_rec_green"
                android:gravity="center"
                android:text="@string/scaled"
                android:foreground="?selectableItemBackground"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16dp" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>