<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
                android:background= "@color/lightBlue"

    tools:context="app.jayang.icebr8k.login_page">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:scrollIndicators="none"
        android:scrollbars="none"
        android:layout_height="wrap_content"
        android:id="@+id/mScroll">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"

        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"


        android:orientation="vertical">



        <ImageView
            android:id="@+id/imageView3"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/imageView2"
            app:srcCompat="@drawable/icebr8k_banner"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:id="@+id/email_layout_login"
        app:errorEnabled="false"
        android:gravity="center"
        android:layout_below="@id/imageView3"
        android:hint="@string/email"
        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/email_login"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            />

    </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:id="@+id/password_layout_login"
            app:errorEnabled="false"

            android:gravity="center"
            android:layout_below="@id/email_login"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

            <android.support.design.widget.TextInputEditText
                android:layout_width="300dp"
                android:id="@+id/password_login"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="textPassword"
                android:hint="@string/password"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/remember_me_login"
            android:text="Remember me"
            android:layout_width="300dp"
            android:layout_height="wrap_content"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/login_btn"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="8dp"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:background="@color/colorAccent"
            android:textAllCaps="false"
            android:text="@string/login"/>
    </LinearLayout>
    </ScrollView>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginTop="50dp"
            android:id="@+id/textDivider"
            android:layout_below="@id/mScroll">

            <TextView
                android:id="@+id/tvText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/or"
                android:textColor="@color/black"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:layout_toLeftOf="@id/tvText"
                android:background="#FFFFF4"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerVertical="true"
                android:layout_marginRight="16dp"
                android:layout_toRightOf="@id/tvText"
                android:background="#FFFFF4"
                />
        </RelativeLayout>



      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
         android:layout_below="@id/textDivider"
          android:paddingTop="10dp"
          android:id="@+id/sign_in_methods"
          android:gravity="center_horizontal">

        <com.shaishavgandhi.loginbuttons.GoogleButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:textAlignment="center"
            app:roundedCorner="true"
            app:roundedCornerRadius="3dp"
            app:iconCenterAligned="true"
            android:textAllCaps="false"

            app:iconSize="30dp"
            android:textColor="@color/dark_gray"
            android:text="Sign in with Google"
            android:layout_height="36dp"
            />

    </RelativeLayout>

        <TextView
            android:layout_centerHorizontal="true"
            android:id="@+id/signup_login"
            android:layout_below="@id/sign_in_methods"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:text="@string/SignUp"
            android:textAlignment="center"
            android:textSize="16sp"/>
    </LinearLayout>
    </ScrollView>







</RelativeLayout>
